Move rollbar client token to .env

--- a/app/templates/base.htm
+++ b/app/templates/base.htm
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='global.css') }}" />
     <script type="text/javascript">
       var _rollbarConfig = {
-        accessToken: "ACCESS TOKEN",
+        accessToken: '{{ ENV['ROLLBAR_CLIENT_TOKEN'] }}',
         captureUncaught: true,
         payload: {
           environment: "production"
