Make rollbar read environment from .env

--- a/app/templates/rollbar.htm
+++ b/app/templates/rollbar.htm
@@ -3,7 +3,7 @@
     accessToken: '{{ ENV['ROLLBAR_CLIENT_TOKEN'] }}',
     captureUncaught: true,
     payload: {
-      environment: "production"
+      environment: "{{ ENV['ENV'] }}"
     }
   };
   // Rollbar Snippet
