Have css be loaded from local server

--- a/app/templates/base.htm
+++ b/app/templates/base.htm
@@ -3,10 +3,10 @@
   <head>
     {% block head %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/css/tether.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='global.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/tether.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css' ) }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
     {% include "rollbar.htm" %}
     {% include "segment.htm" %}
     <title>{% block title %}{% endblock %}</title>
