--- a/app/templates/base.htm
+++ b/app/templates/base.htm
@@ -3,10 +3,9 @@
   <head>
     {% block head %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/tether.min.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css' ) }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}" />
+    {% assets "css_all" %}
+      <link rel="stylesheet" href="{{ ASSET_URL }}" />
+    {% endassets %}
     {% include "rollbar.htm" %}
     {% include "segment.htm" %}
     <title>{% block title %}{% endblock %}</title>
@@ -41,8 +40,8 @@
         {% endblock %}
       </footer>
     </div>
-    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/tether.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    {% assets "js_all" %}
+      <script src="{{ ASSET_URL }}" /></script>
+    {% endassets %}
   </body>
 </html>
