--- a/app/templates/base.htm
+++ b/app/templates/base.htm
@@ -43,5 +43,6 @@
     {% assets "js_all" %}
       <script src="{{ ASSET_URL }}" /></script>
     {% endassets %}
+    {% include "logfit.htm" %}
   </body>
 </html>
