Move logfit.js token to env variable

--- a/app/templates/logfit.htm
+++ b/app/templates/logfit.htm
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   var LogFitConfig = {
-    source: "SOURCE_ID"
+    source: "{{ ENV['LOGFIT_CLIENT_TOKEN'] }}"
   };
 </script>
 <script type="text/javascript" src="/static/js/logfit.min.js"></script>
