Move template stubs into includes directory

--- a/app/templates/404.htm
+++ b/app/templates/404.htm
@@ -1,4 +1,4 @@
-{% extends "base.htm" %}
+{% extends "includes/base.htm" %}
 {% block title %}Page Not Found{% endblock %}
 {% block head %}
   {{ super() }}
