--- a/app/templates/index.htm
+++ b/app/templates/index.htm
@@ -1,4 +1,4 @@
-{% extends "base.htm" %}
+{% extends "includes/base.htm" %}
 {% block title %}TITLE{% endblock %}
 {% block head %}
   {{ super() }}
