--- a/app/static/css/global.css
+++ b/app/static/css/global.css
@@ -1,1 +1,20 @@
-/* CSS */
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 150px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    padding-top: 50px;
+    height: 150px;
+}
