Remove unneeded type="text/javascript"

--- a/app/templates/includes/rollbar.htm
+++ b/app/templates/includes/rollbar.htm
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
   var _rollbarConfig = {
     accessToken: '{{ ENV['ROLLBAR_CLIENT_TOKEN'] }}',
     captureUncaught: true,
