--- a/app/templates/includes/logfit.htm
+++ b/app/templates/includes/logfit.htm
@@ -1,6 +1,6 @@
-<script type="text/javascript">
+<script>
   var LogFitConfig = {
     source: "{{ ENV['LOGFIT_CLIENT_TOKEN'] }}"
   };
 </script>
-<script type="text/javascript" src="/static/js/logfit.min.js"></script>
+<script src="/static/js/logfit.min.js"></script>
