--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -4,9 +4,7 @@
     {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% assets "css_all" %}
-      <link rel="stylesheet" href="{{ ASSET_URL }}" />
-    {% endassets %}
+    <link rel="stylesheet" href="app/static/gen/bundle.min.css" />
     {% include "includes/rollbar.htm" %}
     {% include "includes/segment.htm" %}
     <title>{% block title %}{% endblock %}</title>
