--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -4,7 +4,7 @@
     {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="app/static/gen/bundle.min.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='gen/bundle.min.css') }}" />
     {% include "includes/rollbar.htm" %}
     {% include "includes/segment.htm" %}
     <title>{% block title %}{% endblock %}</title>
