--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ url_for('static', filename='gen/bundle.min.css') }}" />
+    <meta name="Description" content="{% block description %}{% endblock %}">
     {% include "includes/segment.htm" %}
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
