--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ url_for('static', filename='gen/bundle.min.css') }}" />
     <meta name="Description" content="{% block description %}{% endblock %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/favicon/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/favicon/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='img/favicon/favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ url_for('static', filename='img/favicon/manifest.json') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}">
+    <link rel="preconnect" href="https://api.segment.io">
+    <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta name="theme-color" content="#ffffff">
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
