Add additional header tags

--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -4,7 +4,11 @@
     {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-site-verification" content="" />
+    <link rel="alternate" href="{{ request.base_url }}" hreflang="en-us" />
     <link rel="stylesheet" href="{{ url_for('static', filename='gen/bundle.min.css') }}" />
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <meta name="Description" content="{% block description %}{% endblock %}">
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='img/favicon/apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='img/favicon/favicon-32x32.png') }}">
