--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -39,6 +39,7 @@
     {# External Dependencies #}
     <meta name="google-site-verification" content="" />
     <link rel="preconnect" href="https://www.google-analytics.com">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
     {% endblock %}
   </head>
   <body>
