--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -40,6 +40,8 @@
     <meta name="google-site-verification" content="" />
     <link rel="preconnect" href="https://www.google-analytics.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preconnect" href="https://ingest.log.fit">
+    <link rel="preconnect" href="https://www.varsnap.com">
     {% endblock %}
   </head>
   <body>
