--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -21,14 +21,14 @@
     <link rel="manifest" href="{{ url_for('static', filename='img/favicon/manifest.json') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon/favicon.ico') }}">
 
-    <!-- Facebook Meta Tags -->
+    {# Facebook Meta Tags #}
     <meta property="og:url" content="{# TODO #}">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{# TODO #}">
     <meta property="og:description" content="{# TODO #}">
     <meta property="og:image" content="{# TODO #}/static/img/favicon/android-chrome-512x512.png">
 
-    <!-- Twitter Meta Tags -->
+    {# Twitter Meta Tags #}
     <meta name="twitter:card" content="summary">
     <meta property="twitter:domain" content="$HOSTNAME">
     <meta property="twitter:url" content="{# TODO #}">
