--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -42,6 +42,9 @@
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://ingest.log.fit">
     <link rel="preconnect" href="https://www.varsnap.com">
+
+    {# Miscellaneous #}
+    <link type="text/plain" rel="author" href="{{ url_for('humans', _external=True) }}" />
     {% endblock %}
   </head>
   <body>
