Update path to bundled js

--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -79,6 +79,6 @@
         {% endblock %}
       </footer>
     </div>
-    <script src="{{ url_for('static', filename='gen/bundle.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='gen/main.js') }}"></script>
   </body>
 </html>
