--- a/app/templates/includes/base.htm
+++ b/app/templates/includes/base.htm
@@ -56,17 +56,11 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Page 1</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Page 2</a>
-              </li>
-            </ul>
+            <div class="navbar-nav me-auto mb-2 mb-lg-0">
+              <a class="nav-item nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-item nav-link" aria-current="page" href="#">Page 1</a>
+              <a class="nav-item nav-link" aria-current="page" href="#">Page 2</a>
+            </div>
           </div>
         </div>
       </nav>
